tree documentation for constructor and first two methods

--- a/exam2_docs/hashmaps.html
+++ b/exam2_docs/hashmaps.html
@@ -89,7 +89,7 @@ int index = hash & (table.length - 1); // Equivalent to hash % table.length when
             <div class="back-link">
                 <a href="index.html">← Back to Main Page</a>
             </div>
-            <p>Created for Data Structures Course - Spring 2025</p>
+            <p>Created for CSCI 313 - Spring 2025</p>
         </footer>
     </div>
 </body>
