feat: youtube video insert for notes + custom styling

--- a/course_notes/index.html
+++ b/course_notes/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <h1>Data Structures Notes by Alfred</h1>
+            <h1>Data Structures Notes by <a href="https://www.linkedin.com/in/alfredsiby-cyriac/" target="_blank">Alfred Siby Cyriac</a></h1>
             <div>
                 <button class="theme-toggle" id="themeToggle">🌙</button>
                 <button class="toggle-sidebar" id="toggleSidebar">☰</button>
@@ -20,8 +20,10 @@
 
     <!-- Landing Page with Topics -->
     <div class="container" id="topicsPage">
-        <h2>Created for CSCI 313 - Data Structures</h2>
-        <p>Click on any topic to view detailed notes, code examples, and diagrams.</p>
+        <h2>Created for CSCI 313 - Data Structures (Spring 2025)</h2>
+        <p>Each topic's notes include a custom implementation of the data structure, 
+            guidance on using Java’s built-in version, and relevant LeetCode questions for practice.
+        </p>
         
         <div class="topics-grid" id="topicsGrid">
             <!-- Topic cards will be generated here -->
