add: content for linked list introduction sub topic

--- a/course_notes/index.html
+++ b/course_notes/index.html
@@ -13,7 +13,9 @@
             <h1>Data Structures Notes by <a href="https://www.linkedin.com/in/alfredsiby-cyriac/" target="_blank">Alfred Siby Cyriac</a></h1>
             <div>
                 <button class="theme-toggle" id="themeToggle">🌙</button>
-                <button class="toggle-sidebar" id="toggleSidebar">☰</button>
+                <button class="toggle-sidebar" id="toggleSidebar" aria-label="Toggle Navigation">
+                    <span style="font-size: 1.5rem;">☰</span>
+                </button>
             </div>
         </div>
     </header>
@@ -23,6 +25,9 @@
         <h2>Created for CSCI 313 - Data Structures (Spring 2025)</h2>
         <p>Each topic's notes include a custom implementation of the data structure, 
             guidance on using Java’s built-in version, and relevant LeetCode questions for practice.
+        </p>
+        <p>This website does NOT support mobile devices. Please use a larger screen for optimal 
+            viewing experience.
         </p>
         
         <div class="topics-grid" id="topicsGrid">
