first commit to deployment

--- a/course_docs/index.html
+++ b/course_docs/index.html
@@ -20,17 +20,10 @@
             guidance on using Java’s built-in version, and relevant LeetCode questions for practice.
         </p>
         <div class="topics-grid">
-            <!-- Topic Cards -->
-            <a href="topics/array.html" class="topic-card">
-                <div class="card-icon">📊</div>
-                <h2>Arrays</h2>
-                <p>Basic array operations and common techniques</p>
-            </a>
-            
             <a href="topics/linkedlist.html" class="topic-card">
                 <div class="card-icon">🔗</div>
                 <h2>Linked Lists</h2>
-                <p>Single, double, and circular linked lists</p>
+                <p>Dynamic list ultilizing nodes.</p>
             </a>    
         </div>
 
