--- a/course_docs/index.html
+++ b/course_docs/index.html
@@ -23,7 +23,7 @@
             <a href="topics/linkedlist.html" class="topic-card">
                 <div class="card-icon">🔗</div>
                 <h2>Linked Lists</h2>
-                <p>Dynamic list ultilizing nodes.</p>
+                <p>Linear collection of elements connected via pointers</p>
             </a>    
         </div>
 
